--- a/2.1 Convolutional Neural Networks.ipynb
+++ b/2.1 Convolutional Neural Networks.ipynb
@@ -80,7 +80,7 @@
     }
    },
    "source": [
-    "<img src=\"imgs/convnets_cover.png\" width=\"70%\" />\n",
+    "<img src=\"convnets_cover.png\" width=\"70%\" />\n",
     "\n",
     "> source: https://flickrcode.files.wordpress.com/2014/10/conv-net2.png"
    ]
