--- a/2.2.1 CNN HandsOn - MNIST & FC Nets.ipynb
+++ b/2.2.1 CNN HandsOn - MNIST & FC Nets.ipynb
@@ -49,18 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "#os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
-    "#os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
-    "os.environ['THEANO_FLAGS'] = \"device=gpu2\"\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
+    "#os.environ['THEANO_FLAGS'] = \"device=gpu2\"\n",
     "from keras.models import load_model\n",
     "from keras.models import Sequential\n",
     "from keras.layers.core import Dense, Dropout\n",
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -178,11 +186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "____________________________________________________________________________________________________\n",
+      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
+      "====================================================================================================\n",
+      "dense_1 (Dense)                  (None, 512)           401920      dense_input_2[0][0]              \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_1 (Dropout)              (None, 512)           0           dense_1[0][0]                    \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                  (None, 512)           262656      dropout_1[0][0]                  \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_2 (Dropout)              (None, 512)           0           dense_2[0][0]                    \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_3 (Dense)                  (None, 10)            5130        dropout_2[0][0]                  \n",
+      "====================================================================================================\n",
+      "Total params: 669706\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model=load_model('example_MNIST_FC.h5')\n",
     "model.summary()"
@@ -201,13 +231,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'network_history' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-d377be33ece5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Epochs'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Loss'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_history\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'loss'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_history\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'val_loss'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Training'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Validation'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'network_history' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAiAAAAF5CAYAAACm4JG+AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAGo9JREFUeJzt3X2QZXV95/H3B1FZjI7rjhkkYQusDQ8+BO0WS+JDYokM\naDRaQqCRiOBqIVAxnZTGWmNQapWNBAwoCMYHIGIruqksPqywoNkoDxq7FxPjgC4yQVTGAeO4yAwg\n890/7u3Y0+lmpm/f+7u3e96vqlNz7++e37nf86uuez/zO+fck6pCkiSppT2GXYAkSdr9GEAkSVJz\nBhBJktScAUSSJDVnAJEkSc0ZQCRJUnMGEEmS1JwBRJIkNWcAkSRJzRlAJElScyMRQJI8P8lVSb6f\nZHuSl+9Cn99KMp1kW5JvJzmpRa2SJGn5RiKAAI8BbgZOA3Z6c5ok+wOfBa4DDgXOBz6U5MWDK1GS\nJPVLRu1mdEm2A6+oqqseZp0/A46uql+f0zYFrKmqlzQoU5IkLcOozIAs1XOAa+e1XQ0cPoRaJEnS\nEq3UALIPsGle2ybgcUkePYR6JEnSEuw57AJaSfIfgPXARmDbcKuRJGlF2QvYH7i6qu7pxwZXagC5\nC1g3r20d8NOqun+RPuuBKwZalSRJq9urgY/3Y0MrNYDcCBw9r+3IbvtiNgJ87GMf45BDDhlQWZpv\ncnKS9773vcMuY7fimLfnmLfnmLe1YcMGTjzxROh+l/bDSASQJI8B/hOQbtOTkxwK/LiqvpfkbGDf\nqpr9rY+LgdO7V8N8BHgRcAzwcFfAbAM45JBDGBsbG8RuaAFr1qxxvBtzzNtzzNtzzIemb6cwjMpJ\nqM8C/g8wTed3QM4FZoB3dl/fB9hvduWq2gi8FDiCzu+HTAKvq6r5V8ZIkqQRNBIzIFX1v3mYMFRV\nJy/Q9nfA+CDrkiRJgzEqMyCSJGk3YgDRQE1MTAy7hN2OY96eY96eY77yjdxPsQ9KkjFgenp62hOX\nJElagpmZGcbHxwHGq2qmH9t0BkSSJDVnAJEkSc0ZQCRJUnMGEEmS1JwBRJIkNWcAkSRJzRlAJElS\ncwYQSZLUnAFEkiQ1ZwCRJEnNGUAkSVJzBhBJktScAUSSJDVnAJEkSc0ZQCRJUnMGEEmS1JwBRJIk\nNWcAkSRJzRlAJElScwYQSZLUnAFEkiQ1ZwCRJEnNGUAkSVJzBhBJktScAUSSJDVnAJEkSc0ZQCRJ\nUnMGEEmS1JwBRJIkNWcAkSRJzRlAJElScwYQSZLUnAFEkiQ1ZwCRJEnNGUAkSVJzBhBJktScAUSS\nJDVnAJEkSc0ZQCRJUnMGEEmS1JwBRJIkNWcAkSRJzRlAJElScwYQSZLUnAFEkiQ1ZwCRJEnNGUAk\nSVJzBhBJktTcyASQJKcnuT3J1iQ3JTlsJ+u/OsnNSX6W5AdJPpzkCa3qlSRJvRuJAJLkOOBc4Ezg\nmcA3gKuTrF1k/ecClwF/CTwFOAZ4NvDBJgVLkqRlGYkAAkwCl1TV5VV1C3AqcB9wyiLrPwe4vaou\nrKp/rqobgEvohBBJkjTihh5AkjwSGAeum22rqgKuBQ5fpNuNwH5Jju5uYx1wLPC5wVYrSZL6YegB\nBFgLPALYNK99E7DPQh26Mx4nAp9M8gDwQ+BfgDMGWKckSeqTUQggS5bkKcD5wDuAMWA9cACdwzCS\nJGnE7TnsAoC7gYeAdfPa1wF3LdLnrcD1VXVe9/k3k5wGfDnJ26pq/mzKv5qcnGTNmjU7tE1MTDAx\nMdFT8ZIkrSZTU1NMTU3t0LZly5a+v086p1sMV5KbgK9W1Zu6zwPcAVxQVecssP6ngQeq6oQ5bYcD\nXwF+par+TXBJMgZMT09PMzY2NqA9kSRp9ZmZmWF8fBxgvKpm+rHNUTkEcx7w+iSvSXIwcDGwN3Ap\nQJKzk1w2Z/3PAK9KcmqSA7qX5Z5PJ8QsNmsiSZJGxCgcgqGqruz+5sdZdA693Aysr6rN3VX2Afab\ns/5lSX4JOB34c+AndK6ieWvTwiVJUk9GIoAAVNVFwEWLvHbyAm0XAhcOui5JktR/o3IIRpIk7UYM\nIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrO\nACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTm\nDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElq\nzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk\n5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJ\nam5kAkiS05PcnmRrkpuSHLaT9R+V5F1JNibZluS7SV7bqFxJkrQMew67AIAkxwHnAm8AvgZMAlcn\nObCq7l6k26eAJwInA7cBT2KEApUkSVrcSAQQOoHjkqq6HCDJqcBLgVOA98xfOclRwPOBJ1fVT7rN\ndzSqVZIkLdPQZwySPBIYB66bbauqAq4FDl+k28uArwN/nOTOJLcmOSfJXgMvWJIkLdsozICsBR4B\nbJrXvgk4aJE+T6YzA7INeEV3Gx8AngC8bjBlSpKkfhmFANKLPYDtwAlVdS9Akj8EPpXktKq6f7GO\nk5OTrFmzZoe2iYkJJiYmBlmvJEkrwtTUFFNTUzu0bdmype/vk87RjuHpHoK5D3hVVV01p/1SYE1V\nvXKBPpcCv1FVB85pOxj4J+DAqrptgT5jwPT09DRjY2N93w9JklarmZkZxsfHAcaraqYf2xz6OSBV\n9SAwDbxoti1Jus9vWKTb9cC+Sfae03YQnVmROwdUqiRJ6pOhB5Cu84DXJ3lNdybjYmBv4FKAJGcn\nuWzO+h8H7gE+muSQJC+gc7XMhx/u8IskSRoNI3EOSFVdmWQtcBawDrgZWF9Vm7ur7APsN2f9nyV5\nMfA+4O/phJFPAm9vWrgkSerJSAQQgKq6CLhokddOXqDt28D6QdclSZL6b1QOwUiSpN2IAUSSJDVn\nAJEkSc0ZQCRJUnMGEEmS1JwBRJIkNWcAkSRJzRlAJElScwYQSZLUnAFEkiQ1ZwCRJEnNGUAkSVJz\nBhBJktScAUSSJDXXUwBJclSS5815fnqSm5N8PMm/7195kiRpNep1BuQc4HEASZ4OnAt8HjgAOK8/\npUmSpNVqzx77HQB8q/v4VcBnq+q/JBmjE0QkSZIW1esMyAPA3t3HRwDXdB//mO7MiCRJ0mJ6nQH5\nCnBekuuBZwPHddsPBO7sR2GSJGn16nUG5Azg58AxwBur6vvd9qOBL/SjMEmStHr1NANSVXcAv71A\n++SyK5IkSater5fhjnWvfpl9/jtJ/ibJu5M8qn/lSZKk1ajXQzCX0DnfgyRPBj4B3AccC7ynP6VJ\nkqTVqtcAciBwc/fxscDfVdUJwGvpXJYrSZK0qF4DSOb0PYJf/PbH94C1yy1KkiStbr0GkK8Df5Lk\n94DfBD7XbT8A2NSPwiRJ0urVawD5A2AMeD/wrqr6v932Y4Ab+lGYJElavXq9DPcfgKcv8NKbgYeW\nVZEkSVr1ev0lVACSjAOHdJ9+q6pmll+SJEla7XoKIEl+GfgknfM/ftJtfnySLwHHV9XmPtUnSZJW\noV7PAXkf8EvAU6vqCVX1BOBpdG5Ed0G/ipMkSatTr4dgjgKOqKoNsw1V9a0kp/OLO+NKkiQtqNcZ\nkD2ABxdof3AZ25QkSbuJXsPCF4Hzk+w725DkV4D3dl+TJElaVK8B5Aw653tsTHJbktuA24HHdl+T\nJElaVK+/A/K9JGN0fob94G7zBuAW4E+BN/SnPEmStBr1/DsgVVXA/+ouACQ5FHgdBhBJkvQwPGFU\nkiQ1ZwCRJEnNGUAkSVJzSzoHJMlf72SVxy+jFkmStJtY6kmoW3bh9ct7rEWSJO0mlhRAqurkQRUi\nSZJ2H54DIkmSmjOASJKk5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWpuZAJIktOT\n3J5ka5Kbkhy2i/2em+TBJDODrlGSJPXHSASQJMcB5wJnAs8EvgFcnWTtTvqtAS4Drh14kZIkqW9G\nIoAAk8AlVXV5Vd0CnArcB5yyk34XA1cANw24PkmS1EdDDyBJHgmMA9fNtlVV0ZnVOPxh+p0MHAC8\nc9A1SpKk/lrq3XAHYS3wCGDTvPZNwEELdUjya8C7gedV1fYkg61QkiT11dBnQJYqyR50DrucWVW3\nzTYPsSRJkrREozADcjfwELBuXvs64K4F1n8s8CzgGUku7LbtASTJA8CRVfW3i73Z5OQka9as2aFt\nYmKCiYmJ3qqXJGkVmZqaYmpqaoe2LVu29P190jndYriS3AR8tare1H0e4A7ggqo6Z966AQ6Zt4nT\ngRcCrwI2VtXWBd5jDJienp5mbGxsAHshSdLqNDMzw/j4OMB4VfXlZy9GYQYE4Dzg0iTTwNfoXBWz\nN3ApQJKzgX2r6qTuCarfmts5yY+AbVW1oWnVkiSpJyMRQKrqyu5vfpxF59DLzcD6qtrcXWUfYL9h\n1SdJkvprJAIIQFVdBFy0yGsn76TvO/FyXEmSVowVdxWMJEla+QwgkiSpOQOIJElqzgAiSZKaM4BI\nkqTmDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOI\nJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOA\nSJKk5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkD\niCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrOACJJkpoz\ngEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElqbmQCSJLTk9yeZGuSm5Ic9jDr\nvjLJNUl+lGRLkhuSHNmyXkmS1LuRCCBJjgPOBc4Engl8A7g6ydpFurwAuAY4GhgDvgR8JsmhDcqV\nJEnLNBIBBJgELqmqy6vqFuBU4D7glIVWrqrJqvrzqpquqtuq6m3Ad4CXtStZkiT1augBJMkjgXHg\nutm2qirgWuDwXdxGgMcCPx5EjZIkqb+GHkCAtcAjgE3z2jcB++ziNt4MPAa4so91SZKkAdlz2AUs\nV5ITgLcDL6+qu4ddjyRJ2rlRCCB3Aw8B6+a1rwPueriOSY4HPggcU1Vf2pU3m5ycZM2aNTu0TUxM\nMDExscsFS5K0Wk1NTTE1NbVD25YtW/r+PumcbjFcSW4CvlpVb+o+D3AHcEFVnbNInwngQ8BxVfXZ\nXXiPMWB6enqasbGx/hUvSdIqNzMzw/j4OMB4Vc30Y5ujMAMCcB5waZJp4Gt0rorZG7gUIMnZwL5V\ndVL3+Qnd134f+Psks7MnW6vqp21LlyRJSzUSAaSqruz+5sdZdA693Aysr6rN3VX2Afab0+X1dE5c\nvbC7zLqMRS7dlSRJo2MkAghAVV0EXLTIayfPe/7CJkVJkqSBGIXLcCVJ0m7GACJJkpozgEiSpOYM\nIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrO\nACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTm\nDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk5gwgkiSpOQOIJElq\nzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmjOASJKk\n5gwgkiSpOQOIJElqzgAiSZKaM4BIkqTmDCCSJKk5A4gkSWrOACJJkpozgEiSpOZGJoAkOT3J7Um2\nJrkpyWE7Wf+3kkwn2Zbk20lOalWrdt3U1NSwS9jtOObtOebtOeYr30gEkCTHAecCZwLPBL4BXJ1k\n7SLr7w98FrgOOBQ4H/hQkhe3qFe7zg+J9hzz9hzz9hzzlW8kAggwCVxSVZdX1S3AqcB9wCmLrP9G\n4LtV9ZaqurWqLgQ+3d2OJEkacUMPIEkeCYzTmc0AoKoKuBY4fJFuz+m+PtfVD7O+JEkaIUMPIMBa\n4BHApnntm4B9FumzzyLrPy7Jo/tbniRJ6rc9h11AQ3sBbNiwYdh17Fa2bNnCzMzMsMvYrTjm7Tnm\n7Tnmbc357tyrX9schQByN/AQsG5e+zrgrkX63LXI+j+tqvsX6bM/wIknnthblerZ+Pj4sEvY7Tjm\n7Tnm7TnmQ7E/cEM/NjT0AFJVDyaZBl4EXAWQJN3nFyzS7Ubg6HltR3bbF3M18GpgI7BtGSVLkrS7\n2YtO+Li6XxtM53zP4Uryu8CldK5++Rqdq1mOAQ6uqs1Jzgb2raqTuuvvD/wjcBHwETph5S+Al1TV\n/JNTJUnSiBn6DAhAVV3Z/c2Ps+gcSrkZWF9Vm7ur7APsN2f9jUleCrwX+H3gTuB1hg9JklaGkZgB\nkSRJu5dRuAxXkiTtZgwgkiSpuVUTQLyZXXtLGfMkr0xyTZIfJdmS5IYkR7asdzVY6t/5nH7PTfJg\nEn84YYl6+Gx5VJJ3JdnY/Xz5bpLXNip3VehhzF+d5OYkP0vygyQfTvKEVvWudEmen+SqJN9Psj3J\ny3ehz7K/Q1dFAPFmdu0tdcyBFwDX0Ll8egz4EvCZJIc2KHdV6GHMZ/utAS7j396+QDvR45h/Cngh\ncDJwIDAB3DrgUleNHj7Pn0vn7/svgafQuYLy2cAHmxS8OjyGzsUfpwE7PTG0b9+hVbXiF+Am4Pw5\nz0Pnypi3LLL+nwH/MK9tCvj8sPdlpSxLHfNFtvFN4E+GvS8rZel1zLt/2++k84E+M+z9WElLD58t\nRwE/Bh4/7NpX6tLDmP8R8J15bWcAdwx7X1biAmwHXr6TdfryHbriZ0C8mV17PY75/G0EeCydD2vt\nRK9jnuRk4AA6AURL0OOYvwz4OvDHSe5McmuSc5L07eerV7Mex/xGYL8kR3e3sQ44FvjcYKvdrfXl\nO3TFBxC8md0w9DLm872ZzrTflX2sazVb8pgn+TXg3cCrq2r7YMtblXr5O38y8HzgqcArgDfROSRw\n4YBqXG2WPOZVdQNwIvDJJA8APwT+hc4siAajL9+hqyGAaIVJcgLwduDYqrp72PWsRkn2AK4Azqyq\n22abh1jS7mIPOlPYJ1TV16vqC8AfAif5n5vBSPIUOucgvIPO+WXr6cz6XTLEsrQLRuKXUJep1c3s\n9Au9jDkASY6nc3LYMVX1pcGUtyotdcwfCzwLeEaS2f9970Hn6NcDwJFV9bcDqnW16OXv/IfA96vq\n3jltG+iEv18Fbluwl2b1MuZvBa6vqvO6z7+Z5DTgy0neVlXz/6eu5evLd+iKnwGpqgeB2ZvZATvc\nzG6xO/bdOHf9rp3dzE5dPY45SSaADwPHd/9nqF3Uw5j/FHga8Aw6Z6kfClwM3NJ9/NUBl7zi9fh3\nfj2wb5K957QdRGdW5M4Blbpq9DjmewM/n9e2nc7VHM76DUZ/vkOHfcZtn87a/V3gPuA1wMF0pt7u\nAZ7Yff1s4LI56+8P/D86Z/IeROfSoweAI4a9Lytl6WHMT+iO8al0kvLs8rhh78tKWZY65gv09yqY\nAY85nfOa/hn4JHAIncvPbwUuHva+rJSlhzE/Cbi/+9lyAPBcOjc1vWHY+7JSlu7f7aF0/sOyHfiD\n7vP9FhnzvnyHDn3H+ziApwEbga10Utiz5rz2UeCL89Z/AZ2kvRX4DvB7w96HlbYsZczp/O7HQwss\nHxn2fqykZal/5/P6GkAajDmd3/64Gri3G0beAzx62PuxkpYexvx0OndIv5fOTNNlwJOGvR8rZQF+\nsxs8Fvx8HtR3qDejkyRJza34c0AkSdLKYwCRJEnNGUAkSVJzBhBJktScAUSSJDVnAJEkSc0ZQCRJ\nUnMGEEmS1JwBRJIkNWcAkbSiJNme5OXDrkPS8hhAJO2yJB/tBoCHuv/OPv78sGuTtLLsOewCJK04\n/xN4LTve6vz+4ZQiaaVyBkTSUt1fVZur6kdzli3wr4dHTk3y+ST3Jbktyavmdk7ytCTXdV+/O8kl\nSR4zb51TknwzybYk309ywbwanpjkr5P8LMm3k7xsTt/HJ7kiyY+673FrkpMGNhqSemIAkdRvZwGf\nAn4duAL4RJKDAJLsTedW9fcA48AxwBHA+2Y7J3kj8H7gYuCpwEuBb897jz8FPgE8Hfg8cEWSx3df\n+6/AwcD67r9vBO7u905KWp5U1bBrkLRCJPkocCKwbU5zAe+uqv+WZDtwUVWdMafPjcB0VZ2R5PXA\n2cCvVtW27utHA58BnlRVm5PcCXy4qs5cpIbtwFlV9Y7u872Be4GjquqaJP8D2FxV/7m/ey+pnzwH\nRNJSfRE4lR3PAfnxnMc3zVv/RuDQ7uODgW/Mho+u6+nMxh6UBGDf7ns8nH+cfVBV9yX5KfDL3aYP\nAP89yThwDfA3VXXjznZKUlsGEElL9bOqun1A2966i+s9OO950T2kXFVfSPIfgZcALwauTXJhVb2l\nf2VKWi7PAZHUb89Z4PmG7uMNwKFJ/t2c158HPATcUlX3AhuBFy2ngKq6p6r+qqpeA0wCb1jO9iT1\nnzMgkpbq0UnWzWv7eVXd0318bJJp4Ct0zhc5DDil+9oVwDuAy5K8k85hkwuAy6tq9kTRdwAfSLKZ\nziW/jwN+o6revyvFdbc7DfwTsBfw28C3lrqTkgbLACJpqY4CfjCv7VbgKd3HZwLHAxcCPwSOr6pb\nAKpqa5L1wPnA14D7gE8DfzS7oaq6PMmj6cxcnEPnCpZPz3mvhc6crzntDwDvBvanc0jny8BED/sp\naYC8CkZS33SvUHlFVV017FokjTbPAZEkSc0ZQCT1k1OqknaJh2AkSVJzzoBIkqTmDCCSJKk5A4gk\nSWrOACJJkpozgEiSpOYMIJIkqTkDiCRJas4AIkmSmvv/I2rvOYqkPQIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f6df4c52a50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -229,11 +281,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 9 6 9]\n",
+      "[1 4 9 5 9]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "print(np.argmax(model.predict(X_test[5:10]),1))\n",
