--- a/2.2.2 CNN HandsOn - MNIST & CN Nets.ipynb
+++ b/2.2.2 CNN HandsOn - MNIST & CN Nets.ipynb
@@ -44,9 +44,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "#os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
-    "#os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
-    "os.environ['THEANO_FLAGS'] = \"device=gpu2\"\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
+    "#os.environ['THEANO_FLAGS'] = \"device=gpu2\"\n",
     "\n",
     "#Import the required libraries\n",
     "import numpy as np\n",
@@ -60,7 +60,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -521,7 +521,11 @@
     "model.add(Activation('relu'))\n",
     "\n",
     "model.add(Dense(nb_classes))\n",
-    "model.add(Activation('softmax'))"
+    "model.add(Activation('softmax'))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer='sgd',\n",
+    "              metrics=['accuracy'])"
    ]
   },
   {
@@ -537,10 +541,6 @@
    },
    "outputs": [],
    "source": [
-    "model.compile(loss='categorical_crossentropy',\n",
-    "              optimizer='sgd',\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
     "# Ah, another path to choose, Train or load!!\n",
     "'''\n",
     "hist = model.fit(X_train, y_train, batch_size=batch_size, \n",
@@ -630,14 +630,14 @@
     "              optimizer='sgd',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "#'''\n",
+    "'''\n",
     "hist = model.fit(X_train, y_train, batch_size=batch_size/2, \n",
     "                 nb_epoch=nb_epoch, verbose=1, \n",
     "                 validation_data=(X_test, y_test))\n",
     "model.save('example_MNIST_CNN_more_conv.h5')\n",
-    "#'''\n",
-    "#model=load_model('example_MNIST_CNN_more_conv.h5')\n",
-    "#model.summary()"
+    "'''\n",
+    "model=load_model('example_MNIST_CNN_more_conv.h5')\n",
+    "model.summary()"
    ]
   },
   {
